criação de tema

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <!--Here is your free creation area within the Sandbox id element-->
     <div id="SandBox" class="standart">
-       <h1 style="text-align: center; width: 100%;"> Welcome to Sandbox YeBox.js</h1>
+       <h1 style="text-align: center; width: 100%;"> Thalles </h1>
+       <h3> Meu Projeto</h3>
+       <article> EXIBIR o texto </article>
+       <fox></fox>
+       <rabbit></rabbit>
     </div>
     <!--End Element Sandbox-->
 
