criação de projeto

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
        <h1 style="text-align: center; width: 100%;"> Thalles </h1>
        <h3> Meu Projeto</h3>
        <article> EXIBIR o texto </article>
-       <fox></fox>
-       <rabbit></rabbit>
+       <question id='quest1'></question>
+       <card style='text-align:center'></card>
     </div>
     <!--End Element Sandbox-->
 
